changes in list

--- a/index.html
+++ b/index.html
@@ -138,35 +138,35 @@
         <div class="for_about_sec__bring__down">
           <h2 class="about__heading">about <span>us</span></h2>
 
-          <ul>
-            <li>
+          <ul class="ul__for__about">
+            <li class="li_for_about">
               Jamil law firm is a full-service law firm dedicated to providing
               high-quality legal services to individuals and businesses
             </li>
-            <li>
+            <li class="li_for_about">
               Our experienced attorneys have a proven track record of success in
               a variety of practice areas, and we pride ourselves on delivering
               personalized, responsive service to each and every client. Our
               firm was founded on the principles of integrity, professionalism,
               and a commitment to excellence.
             </li>
-            <li>
+            <li class="li_for_about">
               We believe that every client deserves the highest level of legal
               representation, and we work tirelessly to achieve the best
               possible outcomes for our clients.
             </li>
-            <li>
-              At [Law Firm Name], we understand that legal issues can be complex
+            <li class="li_for_about">
+              At our Law Firm, we understand that legal issues can be complex
               and overwhelming. That's why we take the time to listen to our
               clients, understand their unique needs and goals, and develop a
               tailored strategy to achieve the best possible results.
             </li>
-            <li>
+            <li class="li_for_about">
               Whether you're facing a personal injury claim, a complex business
               dispute, or a family law matter, our attorneys have the knowledge
               and experience to help.
             </li>
-            <li>
+            <li class="li_for_about">
               We pride ourselves on our attention to detail, our dedication to
               our clients, and our commitment to achieving the best possible
               outcomes. Contact us today to learn more about how we can help you
