--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
               <li>
                 <a href="#services" class="scroll-link">legal services</a>
               </li>
-              <li>
-                <a href="#tours" class="scroll-link">tours</a>
-              </li>
+              
             </ul>
           </div>
         </div>
@@ -46,11 +44,14 @@
       <!-- banner -->
       <div class="banner">
         <div class="containe">
-          <h2>Expert Legal Services for Your Business and Personal Needs</h2>
           <section class="section1__for__both__aside">
+            <h2 class="expert__service__header">Expert Legal Services for Your Business and Personal Needs</h2>
+            <div class="service__both__content__form">
             <aside class="first__aside__contact">
-              <p class="para__for__1st__sec_info">
-                Name : <span>Advocate Jamil Ahamd</span>
+              <div class="aside__contact">
+                <div class="aside__contact__two2">
+               <p class="para__for__1st__sec_info">
+                  Name : <span>Advocate Jamil Ahmad</span>
               </p>
               <p class="para__for__1st__sec_info">
                 Address :
@@ -97,6 +98,8 @@
                 can help with your legal needs. Thank you for your interest. We
                 look forward to hearing from you soon.
               </p>
+            </div>
+             </div>
             </aside>
             <aside class="aside2__for__form">
               <div class="for__from__main">
@@ -128,6 +131,7 @@
                 </form>
               </div>
             </aside>
+          </div>
           </section>
         </div>
       </div>
@@ -228,12 +232,9 @@
    
     <!-- footer -->
     <footer class="section">
+      
       <p>
-        copyright &copy; backroads travel tours company
-        <span id="date"></span>. all rights reserved
-      </p>
-      <p>
-        Copyright © 2023 . All rights reserved. </p>
+        Copyright © <span id="date"></span>. All rights reserved. </p>
         <p>
         The content on
         this website is protected by copyright law and may not be reproduced or
