--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Scroll</title>
+    <title>Adv Jamil Ahmad </title>
     <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
+    <link rel="icon" href="./law-legal-icon.svg" type="image type">
     <!-- styles -->
     <link rel="stylesheet" href="styles.css" />
   </head>
